--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "hygiene": "node --max_old_space_size=4095 ./node_modules/gulp/bin/gulp.js hygiene",
     "core-ci": "node --max_old_space_size=4095 ./node_modules/gulp/bin/gulp.js core-ci",
     "extensions-ci": "node --max_old_space_size=4095 ./node_modules/gulp/bin/gulp.js extensions-ci",
-    "web:gitlive": "node resources/web/code-web.js --verbose --no-launch --extension custom-extensions/teamhub-teamhub"
+    "web:custom-extensions": "node resources/web/code-web.js --verbose --no-launch --extension $(ls -d custom-extensions/*)"
   },
   "dependencies": {
     "@microsoft/applicationinsights-web": "^2.6.4",
